Rewrite playRound to add UI and scoreboard

--- a/rps.html
+++ b/rps.html
@@ -3,10 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="script.js"></script>
+	<script src="script.js" defer></script>
 	<title>Rock Paper Scissors</title>
 </head>
 <body>
-	
+<div class="container">
+	<div class="game">
+<button class="player-selection" id="ROCK">ROCK</button>
+<button class="player-selection" id="PAPER">PAPER</button>
+<button class="player-selection" id="SCISSORS">SCISSORS</button>
+	</div>
+	<div class="score-board">
+	<div class="choices">
+	</div>
+	<div class="round-result">
+	</div>
+	<div class="score">
+	</div>
+	<div class="result">
+	</div>
+	</div>
+</div>	
 </body>
 </html>
